--- a/gloLessons/style.css
+++ b/gloLessons/style.css
@@ -7,7 +7,7 @@ body {
     font-family: roboto;
 }
 .text {
-    max-width: 1000px;
+    max-width: 65%;
     background: rgba(245, 236, 236, 0.8);
     margin-left: 17%;
     border-radius: 7px;
